<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/grad_bg">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="65dp"
        android:text="@string/register"
        android:textSize="50sp"
        android:fontFamily="@font/roboto_italic"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="20dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/etUser"
            android:fontFamily="@font/roboto_light"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tiUser"
        android:layout_marginTop="7dp"
        android:layout_marginHorizontal="20dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tialamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tiemail"
        android:layout_marginTop="7dp"
        android:layout_marginHorizontal="20dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinoTelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tialamat"
        android:layout_marginTop="7dp"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notelp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tinoTelp"
        android:layout_marginTop="7dp"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiPass"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ticornPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tiPass"
        android:textColorHint="@color/white"
        android:layout_marginTop="7dp"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cornPass"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticornPass"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/aha"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ticornPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>